WIP:Worked on func"assign dates". works till sub-0

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <input type="button" value=" + " onclick="msg()">
         <br> <br>
         <input type="button" value="submit" onclick="make_timetable()">
-    </div> -->
+    </div>
     
-
+-->
    
 
 
