--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 -->
    
 
-
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="timetable.js"></script>
